Fix search box overlapping forum title in some cases. closes #697
- Fix jank in shrinking animation when search box loses focus after overlapping forum title.
- Use solid colors instead of transparent whites/blacks for colored header controls so that search box isn't transparent when it does overlap forum title.
- This also simplifies colored header variables, making them more analogous to the non-colored header variables, and allowing for the removal of some conditional CSS in the notifications dropdown button.

Some more radical changes to header layout (flexbox?) may be made when we implement the new mobile design (#867), but for now this is an acceptable fix.

--- a/framework/core/less/forum/NotificationsDropdown.less
+++ b/framework/core/less/forum/NotificationsDropdown.less
@@ -24,11 +24,6 @@
   }
 }
 
-.NotificationsDropdown .Dropdown-toggle .Button-icon {
-  & when (@config-colored-header = true) {
-    color: mix(@header-bg, @header-color);
-  }
-}
 .NotificationsDropdown .Dropdown-toggle.new .Button-icon {
   color: @header-color;
 }
@@ -37,7 +32,7 @@
   position: absolute;
   top: 1px;
   left: 17px;
-  background: @control-color;
+  background: @header-control-color;
   color: @header-bg;
   font-size: 11px;
   font-weight: bold;
@@ -48,10 +43,6 @@
   min-width: 18px;
   height: 18px;
   text-align: center;
-
-  & when (@config-colored-header = true) {
-    background: mix(@header-bg, @header-color);
-  }
 
   @media @phone {
     left: 20px;
